# GoldenTime

GoldenTime/: .gitignore  00_DOC-MAP.md  CLAUDE.md  PUSH_ANLEITUNG.md  README.md
GoldenTime/02_Daten/: .coverage  make_sample.py  mastr-leads-clean-v2-2026-06-11.csv  pyproject.toml
GoldenTime/02_Daten/pipeline/: README.md  __init__.py  cli.py  config.py  config_store.json  db.py  deliver.py  export_adapter.py  normalize.py  register.py  requirements.txt  speicher_check.py
GoldenTime/02_Daten/pipeline/adapters/: __init__.py  mastr.py
GoldenTime/02_Daten/pipeline/control/: __init__.py  config_store.py  contract.py  metrics.py  state.py
GoldenTime/02_Daten/pipeline/dashboard/: __init__.py  app.py  views.py
GoldenTime/02_Daten/pipeline/enrich/: __init__.py  enricher.py  mastr_resolve.py  providers.py
GoldenTime/02_Daten/pipeline/ledger/: __init__.py  ledger.py
GoldenTime/02_Daten/pipeline/portal/: __init__.py  app.py  auth.py  seed.py  views.py
GoldenTime/02_Daten/pipeline/qualify/: __init__.py  hierarchy.py  qa_gate.py
GoldenTime/02_Daten/pipeline/qualify/heuristics/: energie_pv_firmen.txt  immobilien.txt  ketten_filialisten.txt  oeffentliche_hand.txt  vereine_stiftungen.txt
GoldenTime/02_Daten/pipeline/signal/: __init__.py  from_lead.py  record.py
GoldenTime/02_Daten/pipeline/snapshot/: __init__.py  diff.py  rules.py  store.py
GoldenTime/02_Daten/pipeline/tests/: test_backup_restore.py  test_cli.py  test_cohort.py  test_config_store.py  test_contract.py  test_dashboard.py  test_db.py  test_deliver.py  test_diff_based.py  test_diff_review.py  test_enrich.py  test_g0_delivery.py  test_ledger.py  test_loop1_correctness.py  test_normalize.py  test_portal.py  test_qualify.py  test_qualify_review.py  test_register.py  test_signal_record.py  test_snapshot_diff.py  test_speicher_abr.py  test_state.py
GoldenTime/02_Daten/pipeline/triggers/: __init__.py  base.py  cohort.py  diff_based.py
Roadmap/: GoldenTime-Sprint-Plan.md  (+8 more)
(+51 files in other folders)
